--- a/style.css
+++ b/style.css
@@ -117,4 +117,10 @@
     color: #9c56dd;
 }
 
-
+.img-fluid rounded-start{
+    width: 100%;
+    height: 350px;
+}
+#luftimage{
+    border-style: none;
+}
